objects/LBI__BatchLog__c.object
<CustomObject>
    <fields>
        <fullName>LBI__APIStartDatetime__c</fullName>
        <label>API Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__BatchGUID__c</fullName>
        <label>Batch GUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__BatchName__c</fullName>
        <label>Batch Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ChunkSize__c</fullName>
        <label>Chunk Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ChunksComplete__c</fullName>
        <label>Chunks Complete</label>
        <summaryFilterItems>
            <field>LBI__BatchLogChunk__c.LBI__Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>LBI__BatchLogChunk__c.LBI__BatchLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__ChunksInError__c</fullName>
        <label>Chunks in Error</label>
        <summaryFilterItems>
            <field>LBI__BatchLogChunk__c.LBI__Status__c</field>
            <operation>equals</operation>
            <value>In Error</value>
        </summaryFilterItems>
        <summaryForeignKey>LBI__BatchLogChunk__c.LBI__BatchLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__TotalChunks__c</fullName>
        <label>Total Chunks</label>
        <summaryForeignKey>LBI__BatchLogChunk__c.LBI__BatchLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__TotalCountError__c</fullName>
        <label>Total Count Error</label>
        <summarizedField>LBI__BatchLogChunk__c.LBI__CountError__c</summarizedField>
        <summaryForeignKey>LBI__BatchLogChunk__c.LBI__BatchLog__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__TotalCountSuccess__c</fullName>
        <label>Total Count Success</label>
        <summarizedField>LBI__BatchLogChunk__c.LBI__CountSuccess__c</summarizedField>
        <summaryForeignKey>LBI__BatchLogChunk__c.LBI__BatchLog__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LBI__TotalExpectedRecords__c</fullName>
        <label>Total Expected Records</label>
        <summarizedField>LBI__BatchLogChunk__c.LBI__ExpectedRecords__c</summarizedField>
        <summaryForeignKey>LBI__BatchLogChunk__c.LBI__BatchLog__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Lattice Batch Log</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__BatchGUID__c</columns>
        <columns>LBI__BatchName__c</columns>
        <columns>LBI__ChunksComplete__c</columns>
        <columns>LBI__ChunksInError__c</columns>
        <columns>LBI__APIStartDatetime__c</columns>
        <columns>LBI__TotalExpectedRecords__c</columns>
        <columns>LBI__TotalChunks__c</columns>
        <columns>LBI__TotalCountError__c</columns>
        <columns>LBI__TotalCountSuccess__c</columns>
        <columns>LBI__ChunkSize__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{00000000}</displayFormat>
        <label>Batch Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>